# zsync3

./: CMakeLists.txt  LICENSE  README.md  Zsync3
include/: client.hpp  client_p.hpp
src/: CMakeLists.txt  client.cpp  client_p.cpp  rollingchecksum.cpp
tools/: CMakeLists.txt
tools/zsync/: CMakeLists.txt  zsync.cpp
